--- a/frontend/LearnE/package.json
+++ b/frontend/LearnE/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
     "lrc-parser": "^1.0.1",
     "md5": "^2.3.0",
